test/shouldnt-compile/const-insert.cpp
#include "common.hpp"


void check() {
  const Enums es1;
  es1.insert(Enum::One);
}
